<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/home_filll"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileMenu"
        android:icon="@drawable/user1"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/notificationMenu"
        android:icon="@drawable/bell"
        android:title="@string/notification"
        app:showAsAction="always" />
</menu>