<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/baseline_home_black_48"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/postsMenu"
        android:icon="@drawable/baseline_notes_black_48"
        android:title="@string/posts"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileMenu"
        android:icon="@drawable/baseline_person_pin_black_48"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/baseline_search_black_48"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/notificationMenu"
        android:icon="@drawable/baseline_notifications_black_48"
        android:title="@string/notification"
        app:showAsAction="always" />
</menu>