<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="homeViewModel"
            type="com.dannark.turistando.viewmodels.ExploreViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:transitionGroup="true"
        android:paddingBottom="@dimen/bottom_layout"
        app:paddingBottomSystemWindowInsets="@{true}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/headerFragment"
                android:name="com.dannark.turistando.ui.header.HeaderFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_header" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <EditText
                    android:id="@+id/search_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/input"
                    android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
                    android:drawablePadding="6dp"
                    android:elevation="7dp"
                    android:ems="10"
                    android:hint="Places"
                    android:inputType="textPersonName"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="TODO"
                    app:layout_constraintStart_toStartOf="@+id/search_places"
                    app:layout_constraintTop_toTopOf="@+id/description"
                    app:srcCompat="@drawable/placeholder"
                    app:tint="@color/description_text" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_places">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:checkedChip="@id/chip_recommended"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_recommended"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recommended"
                            android:textAppearance="@style/TextAppearance.TitleMid"
                            android:checkable="true"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/transparent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beach"
                            app:checkedIconVisible="false"
                            android:textAppearance="@style/TextAppearance.TitleMidNotChecked"
                            style="@style/TextAppearance.TitleMidNotChecked"
                            app:chipBackgroundColor="@color/transparent" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/popular"
                            app:checkedIconVisible="false"
                            android:textAppearance="@style/TextAppearance.TitleMidNotChecked"
                            style="@style/TextAppearance.TitleMidNotChecked"
                            app:chipBackgroundColor="@color/transparent" />


                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/description"
                    style="@style/TextAppearance.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rua Major Medeiros, 131"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextAppearance.TitleBig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/explore_new_places"
                    app:layout_constraintStart_toStartOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/friends_near_by"
                    style="@style/TextAppearance.TitleMid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/friends_near_by"
                    app:layout_constraintStart_toStartOf="@+id/search_places"
                    app:layout_constraintTop_toBottomOf="@+id/recommended_list" />


                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="32dp"
                    android:clipToPadding="false"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friend_list">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:checkedChip="@id/chip_nearby"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_nearby"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:text="@string/near"
                            android:textAppearance="@style/TextAppearance.TitleMid"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/transparent" />


                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommended_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_list_recommended_places" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/friend_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friends_near_by"
                    tools:listitem="@layout/item_list_friends" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/places_nearby_list"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                    tools:listitem="@layout/item_list_recommended_places" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
